--- a/starter/app/src/main/res/layout/shoes_details_fragment.xml
+++ b/starter/app/src/main/res/layout/shoes_details_fragment.xml
@@ -2,6 +2,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <data>
+        <variable
+            name="shoe"
+            type="com.udacity.shoestore.models.Shoe" />
+    </data>
+
+    <!-- This layout is a little more complex because it has views aligned next to each other
+     and to avoid having a ViewGroup inside the other, it is better to use ConstraintLayout. -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -40,6 +49,7 @@
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
                     android:imeOptions="actionNext"
+                    android:text="@={shoe.name}"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -65,6 +75,7 @@
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
                     android:imeOptions="actionNext"
+                    android:text="@={shoe.company}"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -91,6 +102,7 @@
                     android:layout_marginEnd="@dimen/default_margin"
                     android:imeOptions="actionNext"
                     android:inputType="numberDecimal"
+                    android:text="@={shoe.size}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -115,6 +127,7 @@
                     android:layout_marginTop="@dimen/default_margin"
                     android:layout_marginEnd="@dimen/default_margin"
                     android:imeOptions="actionDone"
+                    android:text="@={shoe.description}"
                     android:inputType="textPersonName"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
