--- a/starter/app/src/main/res/layout/welcome_fragment.xml
+++ b/starter/app/src/main/res/layout/welcome_fragment.xml
@@ -2,6 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--  The layout is simple, containing one element below the other,
+     so we don't need to be assigning constraint values,
+      making it easier to create the layout.  -->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
