--- a/starter/app/src/main/res/navigation/app_navigation.xml
+++ b/starter/app/src/main/res/navigation/app_navigation.xml
@@ -60,44 +60,10 @@
             app:destination="@id/shoesDetailsFragment"
             app:launchSingleTop="true"
             app:popUpToInclusive="true" />
-        <argument
-            android:name="shoe_name"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="size"
-            app:argType="float" />
-        <argument
-            android:name="company"
-            app:argType="string"
-            app:nullable="true" />
-        <argument
-            android:name="description"
-            app:argType="string"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/shoesDetailsFragment"
         android:name="com.udacity.shoestore.shoes.ShoesDetailsFragment"
         android:label="@string/shoe_details"
-        tools:layout="@layout/shoes_details_fragment">
-        <action
-            android:id="@+id/action_shoesDetailsFragment_to_listShoesFragment"
-            app:destination="@id/listShoesFragment"
-            app:popUpTo="@id/listShoesFragment"
-            app:popUpToInclusive="true">
-            <argument
-                android:name="shoe_name"
-                app:nullable="true" />
-            <argument
-                android:name="company"
-                app:nullable="true" />
-            <argument
-                android:name="description"
-                app:nullable="true" />
-            <argument
-                android:name="size"
-                android:defaultValue="0.0" />
-        </action>
-    </fragment>
+        tools:layout="@layout/shoes_details_fragment"/>
 </navigation>
